[package]
name = "okta-jwt-verifier"
description = "A helper library for working with JWT's for Okta in Rust"
version = "0.4.4"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/okta-jwt-verifier.git"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["okta", "jwt"]
categories = [
    "web-programming"
]
edition = "2018"

[dependencies]
anyhow = "1.0.57"
jsonwebkey = { version = "0.3.5", features = ["jwt-convert"] }
jsonwebtoken = "8.1.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
surf = "2.3.2"
http-cache-surf = { version = "0.5.0", optional = true }

[dev-dependencies]
async-trait = "0.1.56"
async-std = { version = "1.11.0", features = ["attributes"] }
jwt-simple = "0.11.0"
mockito = "0.31.0"
tide = "0.16.0"
tide-http-auth = "0.5.0"

[features]
default = []
disk-cache = ["http-cache-surf"]
