[package]
name = "okta-jwt-verifier"
description = "A helper library for working with JWT's for Okta in Rust"
version = "0.5.0"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/okta-jwt-verifier.git"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["okta", "jwt"]
categories = [
    "web-programming"
]
edition = "2021"
rust-version = "1.60.0"

[dependencies]
anyhow = "1.0.69"
jsonwebkey = { version = "0.3.5", features = ["jwt-convert"] }
jsonwebtoken = "^8.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
surf = "2.3.2"
http-cache-surf = { version = "0.6.0", optional = true }

[dev-dependencies]
async-trait = "0.1.64"
async-std = { version = "1.12.0", features = ["attributes"] }
jwt-simple = "0.11.3"
mockito = "0.31.1"
tide = "0.16.0"
tide-http-auth = "0.5.0"

[features]
default = []
disk-cache = ["http-cache-surf"]
