[package]
name = "okta-jwt-verifier"
description = "A helper library for working with JWT's for Okta in Rust"
version = "0.8.0"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/okta-jwt-verifier.git"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["okta", "jwt"]
categories = [
    "web-programming"
]
edition = "2021"
rust-version = "1.73.0"

[dependencies]
anyhow = "1.0.72"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
surf = { version = "2.3.2", optional = true }
reqwest = { version = "0.12.8", features = ["json"], optional = true }
reqwest-middleware = { version = "0.3.3", optional = true }
http-cache-surf = { version = "0.13.0", optional = true }
http-cache-reqwest = { version = "0.14.0", optional = true }

[dev-dependencies]
async-trait = "0.1.72"
async-std = { version = "1.12.0", features = ["attributes"] }
jwt-simple = "0.12.10"
mockito = "1.5.0"
tide = "0.16.0"
tide-http-auth = "0.5.0"
tokio = { version = "1.40.0", features = [ "macros", "rt", "rt-multi-thread" ] }

[features]
default = ["client-surf"]
client-surf = ["surf"]
client-reqwest = ["reqwest", "reqwest-middleware"]
cache-surf = ["http-cache-surf"]
cache-reqwest = ["http-cache-reqwest"]
